# biffo-template

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .prettierignore  CLAUDE.md  README.md  biffo.config.json  commitlint.config.js  eslint.config.mjs  package.json  pnpm-lock.yaml  pyproject.toml  ruff.toml  turbo.json
.github/: CODEOWNERS  pull_request_template.md  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  deploy-app.yml  deploy-global.yml  deploy-infra.yml  destroy-global.yml  destroy-infra.yml  terraform-fmt.yml
apps/portal/: .env.example  eslint.config.mjs  package.json  tailwind.config.ts  tsconfig.json
cli/: package.json  tsconfig.json  vitest.config.ts
cli/schemas/: biffo-config.schema.json
cli/src/: index.ts  test-setup.ts
scripts/: bootstrap.sh  setup-oidc.sh
services/_template/: pyproject.toml
services/_template/src/service/: main.py
services/api/: pyproject.toml
services/api/migrations/: env.py
services/api/migrations/versions/: 0001_create_users_table.py
services/api/src/api/: config.py  database.py  dependencies.py  main.py
services/api/src/api/events/: __init__.py  base.py
services/api/src/api/middleware/: auth.py
services/api/src/api/migrations/: plugin_migrations.py
services/api/src/api/models/: __init__.py  base.py  plugin_table.py  user.py
services/api/src/api/routers/: auth.py  health.py  users.py
services/api/src/api/schemas/: base.py  user.py
services/api/tests/: conftest.py  test_auth.py  test_plugin_migrations.py  test_plugin_table.py
(+78 files in other folders)
