[project]
name = "biffo-service-template"
version = "0.0.0"
description = "Template for new Biffo microservices — copy this directory and rename"
requires-python = ">=3.13"
dependencies = [
  "aws-lambda-powertools>=3.4.0",
  "boto3>=1.35.98",
  "httpx>=0.28.1",
  "pydantic>=2.10.4",
]

[dependency-groups]
dev = [
  "pytest>=8.3.4",
  "pytest-asyncio>=0.25.2",
  "moto[events]>=5.0.25",
]
