[project]
name = "biffo-api"
version = "0.0.0"
description = "Biffo core API service"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115.6",
  "mangum>=0.19.0",
  "pydantic>=2.10.4",
  "pydantic-settings>=2.7.1",
  "email-validator>=2.2.0",
  "sqlalchemy>=2.0.36",
  "alembic>=1.14.0",
  "asyncpg>=0.30.0",
  "boto3>=1.35.98",
  "aws-lambda-powertools>=3.4.0",
  "python-jose[cryptography]>=3.3.0",
  "httpx>=0.28.1",
]

[dependency-groups]
dev = [
  "pytest>=8.3.4",
  "pytest-asyncio>=0.25.2",
  "pytest-cov>=6.0.0",
  "httpx>=0.28.1",
  "bandit>=1.8.0",
  "pip-audit>=2.8.0",
  "moto[s3,secretsmanager,events]>=5.0.25",
  "ruff>=0.8.0",
  "pyright>=1.1.0",
]
